# pastel

./: .editorconfig  .gitignore  404.html  Cargo.toml  Justfile  README.md  deny.toml  index.html  installation.html  print.html  searchindex.js  searchindex.json
.github/workflows/: audit.yml  gh-pages.yml
book/: book.toml
book/src/: README.md  SUMMARY.md  installation.md
crates/paastel/: Cargo.toml
crates/paastel/src/: lib.rs
crates/paastel_auth/: Cargo.toml
crates/paastel_auth/src/: application.rs  domain.rs  error.rs  lib.rs  port.rs  service.rs
crates/paastel_cli/: Cargo.toml  build.rs
crates/paastel_cli/src/: error.rs  lib.rs  main.rs  settings.rs
crates/paastel_cli/src/cmd/: auth.rs  mod.rs  push.rs  settings.rs  version.rs
crates/paastel_cli/src/util/: compress.rs  mod.rs  style.rs
crates/paastel_hash/: Cargo.toml
crates/paastel_hash/src/: lib.rs
crates/paastel_kube/: Cargo.toml
crates/paastel_kube/src/: client.rs  error.rs  lib.rs  mapper.rs  secrets.rs
crates/paastel_kube/tests/: kube_secrets_test.rs
crates/paastel_kube/tests/common/: mod.rs
crates/paastel_rest/: Cargo.toml
crates/paastel_rest/src/: app.rs  error.rs  lib.rs  main.rs  prometheus.rs  state.rs  utils.rs
crates/paastel_rest/src/middleware/: mod.rs
crates/paastel_rest/src/router/: mod.rs
crates/paastel_rest/src/router/v1/: me.rs  mod.rs
crates/paastel_rest/src/router/v1/application/: create.rs  mod.rs  upload.rs
crates/paastel_secret/: Cargo.toml
crates/paastel_secret/src/: lib.rs  port.rs  service.rs
crates/paastel_settings/: Cargo.toml
crates/paastel_settings/src/: lib.rs  location.rs  namespace.rs
crates/paastel_storage/: Cargo.toml
crates/paastel_storage/src/: lib.rs  s3.rs
crates/paastel_uid/: Cargo.toml
manifests_tests/: secret.yml
