[workspace]
resolver = "2"
members = ["crates/paastel_cli", "crates/paastel_rest"]

[workspace.package]
authors = ["Murilo Ijanc' <mbsd@m0x.ru>"]
categories = ["development-tools", "web-programming"]
description = "Go from application sources to URL in a single step"
edition = "2021"
homepage = "https://microbio.rs"
keywords = ["paas", "platform", "development-tools"]
license = "ISC"
repository = "https://github.com/microbio-rs/paastel"
rust-version = "1.76"

[workspace.lints.clippy]
all = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
