[workspace]
resolver = "2"
members  = ["crates/paastel", "crates/paastel_cli", "crates/paastel_hash", "crates/paastel_kube", "crates/paastel_rest"]

[workspace.package]
authors      = ["Murilo Ijanc' <mbsd@m0x.ru>"]
categories   = ["development-tools", "web-programming"]
description  = "Go from application sources to URL in a single step"
edition      = "2021"
homepage     = "https://microbio.rs"
keywords     = ["paas", "platform", "development-tools"]
license      = "ISC"
repository   = "https://github.com/microbio-rs/paastel"
rust-version = "1.76"

[workspace.lints.clippy]
all           = "warn"
dbg_macro     = "warn"
todo          = "warn"
unimplemented = "warn"
print_stderr  = "warn"
print_stdout  = "warn"

[workspace.dependencies]
serde             = { version = "1.0.197", features = ["derive"] }
tracing           = "0.1.40"
mockall           = "0.12.1"
async-trait       = "0.1.78"
anyhow            = "1.0.81"
thiserror         = "1.0.58"
uuid              = "1.7.0"
derive-new        = "0.6.0"
pretty_assertions = "1.4.0"
base64            = "0.22.0"
