[package]
name                   = "paastel"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
derive-new.workspace  = true
mockall.workspace     = true
thiserror.workspace   = true
tracing.workspace     = true

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
