[package]
name                   = "paastel_auth"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
base64.workspace     = true
derive-new.workspace = true
serde                = { workspace = true, features = ["derive"] }
thiserror.workspace  = true
url                  = { version = "2.5.0", features = ["serde"] }

[lints]
workspace = true
