[package]
name                   = "paastel_auth"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace     = true
derive-new.workspace = true
mockall.workspace = true
serde                = { workspace = true, features = ["derive"] }
thiserror.workspace  = true
tracing.workspace = true

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
