[package]
name                   = "paastel_hash"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
argon2                = "0.5.3"
async-trait.workspace = true
paastel_auth          = { version = "0.1.0", path = "../paastel_auth" }
rand_core             = { version = "0.6.4", features = ["std"] }

[lints]
workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tokio                       = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
