[package]
name                   = "paastel_kube"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
derive-new.workspace  = true
k8s-openapi           = { version = "0.21.1", features = ["latest"] }
kube                  = { version = "0.90.0", features = ["runtime", "derive"] }
paastel_auth          = { version = "0.1.0", path = "../paastel_auth" }
schemars              = "0.8.19"
serde                 = { workspace = true, features = ["derive"] }
serde_json            = "1.0.114"
serde_yaml            = "0.9.33"
thiserror.workspace   = true
tokio                 = { version = "1.36.0", features = ["time"] }
tracing.workspace     = true

[lints]
workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tokio                       = { version = "1.36.0", features = ["macros"] }
