[package]
name                   = "paastel_rest"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
axum              = "0.7.4"
serde.workspace   = true
tokio             = { version = "1.36.0", features = ["signal"] }
tower             = { version = "0.4.13", features = ["util"] }
tower-http        = { version = "0.5.2", features = ["timeout", "trace"] }
tracing.workspace = true

[lints]
workspace = true

[lib]
doctest = false
