[package]
name = "paastel_storage"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
aws-config = "1.1.8"
aws-sdk-s3 = "1.20.0"
paastel = { version = "0.1.0", path = "../paastel" }
thiserror.workspace = true

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros"] }
