[package]
name                   = "paastel_uid"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
paastel               = { version = "0.1.0", path = "../paastel" }
thiserror.workspace   = true
uuid                  = { workspace = true, features = ["v4", "fast-rng", "macro-diagnostics"] }

[lints]
workspace = true
